--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"嘟嘟Blog",
+    "subTitle":"嘟嘟Blog description",
+    "avatarUrl":"https://dudufashion.cloudns.ph/images/red_avatar.png",
     "GMEEK_VERSION":"last"
 }
