--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"嘟嘟Blog",
     "subTitle":"嘟嘟Blog description",
-    "avatarUrl":"https://dudufashion.cloudns.ph/images/red_avatar.png",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/48081326?u=3c792214a5ebb938f828160f5be47be8af0ef5e1&v=4",
     "GMEEK_VERSION":"last"
 }
